# UnconventionalMagnetismNatComm

./: CMakeLists.txt  README.md  main.cpp  multilayer_greens_function.cpp  multilayer_greens_function.h  unconventional_figures.cpp  unconventional_figures.h
include/: matplotlibcpp.h  multilayer_greens_function.h  unconventional_figures.h
src/: main.cpp
